--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: 'archiaregular';
+  src: url('./fonts/archia-regular-webfont.eot');
+  src: url('./fonts/archia-regular-webfont.eot?#iefix') format('embedded-opentype'),
+       url('./fonts/archia-regular-webfont.woff2') format('woff2'),
+       url('./fonts/archia-regular-webfont.woff') format('woff'),
+       url('./fonts/archia-regular-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 .App {
   text-align: center;
 }
@@ -8,6 +19,7 @@
 }
 .main_wrapper {
   width: 100%;
+  font-family: 'archiaregular';
 }
 
 
