--- a/src/component/login.scss
+++ b/src/component/login.scss
@@ -3,6 +3,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    position: relative;
     // align-items: center;
     // justify-content: ;
 
@@ -21,10 +22,21 @@
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
+            position: relative;
 
             img {
                 max-width: 100%;
             }
+        }
+
+        .image:after {
+            content: "";
+            width: 100%;
+            height: 276px;
+            background-color: rgba(0, 0, 0, 0.42);
+            position: absolute;
+            top: 0em;
+            left: 0em;        
         }
         .blk1  {
             background-image: url(../images/baby1.jpeg);
@@ -70,12 +82,21 @@
     }
 
     form {
-        width: auto;
-        flex: auto;
+        width: 400px;
+        height: 330px;
         border: none;
         margin: 0;
-        background-color: #fdfdfda1;
-        padding: 0 30px;
+        background-color: #fdfdfd;
+        padding: 0 60px;
+        position: absolute;
+        border-radius: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        left: 15%;
+        border-left: 10px solid #4081fb;
+        z-index: 2;
 
         label {
             display: none;
@@ -86,9 +107,15 @@
             padding: 12px 20px;
             margin: 0 0 8px 0;
             display: inline-block;
-            border: 1px solid #ccc;
+            border: none;
             box-sizing: border-box;
             font-size: 13px;
+            font-family: 'archiaregular';
+            /* border-bottom: 1px solid #ccc; */
+            box-shadow: 0 10px 35px rgba(0, 0, 0, 0.1);
+            -webkit-box-shadow: 0 10px 35px rgba(0, 0, 0, 0.1);
+            background-color: transparent;
+            border-radius: 6px;
         }
 
         input:focus {
@@ -97,7 +124,7 @@
         }
         
         button {
-            background-color: #fc5c7d;
+            background-color: #4081fb;
             color: white;
             padding: 14px 20px;
             margin: 0 0 8px 0;
@@ -105,6 +132,10 @@
             cursor: pointer;
             width: 100%;
             font-size: 13px;
+            font-family: 'archiaregular';
+            box-shadow: 0 10px 35px rgba(0, 0, 0, 0.1);
+            -webkit-box-shadow: 0 10px 35px rgba(0, 0, 0, 0.1);
+            border-radius: 6px;
         }
         
         button:hover {
@@ -124,16 +155,27 @@
         }
         
         .container {
-            // padding: 16px;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: center;
+            width: 100%;
+        }
+
+        .container.btm {
+            flex-direction: row;
+            justify-content: space-between;
         }
         
         .psw {
-            float: right;
-            padding-top: 16px;
+            padding-top: 10px;
             text-decoration: none;
             color: #696969;
-            font-size: 14px;
+            font-size: 13px;
+        }
 
+        .danger {
+            color: #ff8383;
         }
     }
 
