--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,99 @@
   font-family: 'archiaregular';
 }
 
+
+body{
+  margin: 0;
+  padding: 0;
+  font-family: 'archiaregular';
+  color: #fff;
+}
+
+*{
+  box-sizing: border-box;
+}
+
+a{
+  text-decoration: none;
+  cursor: pointer;
+  -webkit-transition: color 0.1s linear 0s;	
+    -moz-transition: color 0.1s linear 0s;
+    -o-transition: color 0.1s linear 0s;
+        transition: color 0.1s linear 0s;
+}
+
+a:hover,
+a:active,
+a:focus{
+  outline: 0;
+  color:#000;
+  text-decoration:none;
+}
+
+a img {
+  border: none;
+}
+
+p {
+  margin: 0 0 30px;
+  font-size: 14px;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+input:focus, 
+textarea:focus,
+input[type="text"]:focus {
+  outline: 0;
+}
+
+input, button, select, textarea {
+  outline: 0;
+}
+
+.main_wrapper {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  /* background-image: url(./images/bg1.jpg); */
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: scroll;
+  background-color: #fff;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: block;
+}
+
+.primary_btn {
+  display: inline-block;
+  padding: 14px 54px;
+  border-radius: 5px;
+  font-size: 14px;
+  text-transform: capitalize;
+  border: none;
+  color: #fff!important;
+  background: rgb(240,168,107);
+  background: linear-gradient(90deg, rgba(240,168,107,1) 0%, rgba(225,118,67,1) 100%);
+}
+
+.primary_btn:hover {
+  color: #000!important;
+  background: rgb(247,229,214);
+  background: linear-gradient(90deg, rgba(247,229,214,1) 0%, rgba(225,118,67,1) 100%);
+}
+
+.flex_wrap {
+  display: flex;
+}
+
 iframe {
   display: none;
 }
