--- a/src/component/register/register.scss
+++ b/src/component/register/register.scss
@@ -12,11 +12,24 @@ select:focus {
             flex-direction: row;
             width: 100%;
             justify-content: space-between;
+            padding: 12px 20px;
+            background-color: #fff;
+            box-shadow: 0 10px 35px rgba(0, 0, 0, 0.1);
+            -webkit-box-shadow: 0 10px 35px rgba(0, 0, 0, 0.1);
+            background-color: #fff;
+            border-radius: 6px;
+            margin: 0 0 8px 0;
 
             select {
-                flex: 2;
+                flex: 2 1;
                 margin: 0 10px 8px 0;
                 color: #7b7b7b;
+                padding: 0;
+                box-shadow: none;
+                -webkit-box-shadow: none;
+                background-color: none;
+                border-radius: 0;
+                margin: 0;
             }
 
             button {
