--- a/src/component/dashboard/dashboard.scss
+++ b/src/component/dashboard/dashboard.scss
@@ -15,6 +15,7 @@
         margin: 0;
         padding: 2em;
         text-align: center;
+        background-color: #ecffc4;
 
         img {
             width: 100px;
