--- a/src/component/commonPopup/popup.scss
+++ b/src/component/commonPopup/popup.scss
@@ -1,6 +1,63 @@
 @import '../login/login';
 
 
-.modal{
-    width: 800px;
+.modal {
+    width: 100%;
+    padding: 2em;
+    border-radius: 10px;
+  }
+
+.popup_wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+
+    .popup_btm {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 5px;
+    }
+}
+
+.more_field {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    padding: 12px 20px;
+    background-color: #fff;
+    box-shadow: 0 10px 35px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 10px 35px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+    border-radius: 6px;
+    margin: 0 0 8px 0;
+
+    select {
+        flex: 2 1;
+        margin: 0 10px 8px 0;
+        color: #7b7b7b;
+        padding: 0;
+        box-shadow: none;
+        -webkit-box-shadow: none;
+        background-color: none;
+        border-radius: 0;
+        margin: 0;
+    }
+
+    button {
+        flex: 0;
+        background-color: #ffffff;
+        color: #4081fb;
+    }
+}
+
+
+@media only screen and (max-width: 768px) {
+    .popup-content {
+        width: 100%!important;
+    }
 }
